Updates / enhances code to pass CDI-related tests of the new Batch TCK